--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -1,4 +1,5 @@
-{% extends 'form_div_layout.html.twig' %}
+{% extends 'MopaBootstrapBundle:Form:fields.html.twig' %}
+{% from 'MopaBootstrapBundle::flash.html.twig' import flash %}
 
 {# Widgets #}
 
@@ -28,151 +29,3 @@
     {% endif %}
     {% endspaceless %}
 {% endblock %}
-
-{% block form_row %}
-{% set attr = attr|merge({'class': attr.class|default('') ~ (errors|length > 0 ? ' error' : '') }) %}
-{% spaceless %}
-    <div class="pure-control-group{% if errors|length > 0 %} error{% endif %}{% if attr.class %} {{ attr.class }}{% endif %}">
-        {{ form_label(form) }}
-        {{ form_errors(form) }}
-        {{ form_widget(form) }}
-        {% if help is defined and help is not null %}<div class="help"><p><strong>Assist: </strong>{{ help }}</p></div>{% endif %}
-    </div>
-{% endspaceless %}
-{% endblock form_row %}
-
-{% block radio_widget %}
-{% set label_attr = label_attr|merge({'class': 'pure-radio' }) %}
-{% spaceless %}
-    {% if label is not sameas(false) %}
-        {% if not compound %}
-            {% set label_attr = label_attr|merge({'for': id}) %}
-        {% endif %}
-        {% if required %}
-            {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
-        {% endif %}
-        {% if label is empty %}
-            {% set label = name|humanize %}
-        {% endif %}
-        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>
-    {% endif %}
-    <input type="radio" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />{{ label|trans({}, translation_domain) }}</label>
-{% endspaceless %}
-{% endblock radio_widget %}
-
-{% block checkbox_widget %}
-{% set label_attr = label_attr|merge({'class': 'pure-checkbox' }) %}
-{% spaceless %}
-    {% if label is not sameas(false) %}
-        {% if not compound %}
-            {% set label_attr = label_attr|merge({'for': id}) %}
-        {% endif %}
-        {% if required %}
-            {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
-        {% endif %}
-        {% if label is empty %}
-            {% set label = name|humanize %}
-        {% endif %}
-        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>
-    {% endif %}
-    <input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />{{ label|trans({}, translation_domain) }}</label>
-{% endspaceless %}
-{% endblock checkbox_widget %}
-
-
-{% block choice_widget_expanded %}
-{% spaceless %}
-    <div {{ block('widget_container_attributes') }}>
-    {% for child in form %}
-        {{ form_widget(child) }}
-    {% endfor %}
-    </div>
-{% endspaceless %}
-{% endblock choice_widget_expanded %}
-
-{% block form_errors %}
-{% spaceless %}
-    {% if errors|length > 0 %}
-    <ul class="errors">
-        {% for error in errors %}
-            <li>{{ error.message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-{% endspaceless %}
-{% endblock form_errors %}
-
-{% block single_collection_widget %}
-{% spaceless %}
-    {% if prototype is defined %}
-    <div {{ block('widget_container_attributes') }}>
-        {{ form_row(prototype) }}
-    </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock single_collection_widget %}
-
-{% block datetime_widget %}
-{% set attr = attr|merge({'class': (attr.class|default('') ~ ' datetime')|trim}) %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        <div {{ block('widget_container_attributes') }}>
-            {{ form_errors(form.date) }}
-            {{ form_errors(form.time) }}
-            {{ form_widget(form.date) }}
-            {{ form_widget(form.time) }}
-        </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock datetime_widget %}
-
-{% block date_widget %}
-{% set attr = attr|merge({'class': (attr.class|default('') ~ ' date')|trim}) %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        <div {{ block('widget_container_attributes') }}>
-            {{ date_pattern|replace({
-                '{{ year }}':  form_widget(form.year),
-                '{{ month }}': form_widget(form.month),
-                '{{ day }}':   form_widget(form.day),
-            })|raw }}
-        </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock date_widget %}
-
-{% block time_widget %}
-{% set attr = attr|merge({'class': (attr.class|default('') ~ ' time')|trim}) %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        {% set vars = widget == 'text' ? { 'attr': { 'size': 1 }} : {} %}
-        <div {{ block('widget_container_attributes') }}>
-            {{ form_widget(form.hour, vars) }}{% if with_minutes %}<span>:</span>{{ form_widget(form.minute, vars) }}{% endif %}{% if with_seconds %}span{{ form_widget(form.second, vars) }}{% endif %}
-        </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock time_widget %}
-
-{% block month_select_widget %}
-{% set attr = attr|merge({'class': (attr.class|default('') ~ ' date')|trim}) %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('form_widget_simple') }}
-    {% else %}
-        <div {{ block('widget_container_attributes') }}>
-            {{ date_pattern|replace({
-                '{{ year }}':  form_widget(form.year),
-                '{{ month }}': form_widget(form.month),
-                '{{ day }}': form_widget(form.day)
-            })|raw }}
-        </div>
-    {% endif %}
-{% endspaceless %}
-{% endblock month_select_widget %}
-
