Progressive updates to files, needed to commit to be able to update version of TWBS on local development master

--- a/Resources/public/less/bootstrap.less
+++ b/Resources/public/less/bootstrap.less
@@ -1,10 +1,18 @@
+/*!
+* MopaBootstrapSandboxBundle
+*
+* Copyright 2011 Mohrenweiser & Partner
+* Licensed under the Apache License v2.0
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* This file is a fully functional example for MopaBootstrapBundle
+*/
 
 // Main bootstrap.less entry point
-@import "../../../../../../../../mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/bootstrap/less/bootstrap.less";
+@import "../../../../../../../../twbs/bootstrap/less/bootstrap.less";
 
 // variables
-@iconSpritePath:       "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:  "../img/glyphicons-halflings-white.png";
+@icon-font-path: "/bundles/mopabootstrap/bootstrap/fonts/";
 
 // The Paginator less for MopaBootstrapBundle
 @import "../../../../../../../../mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/less/paginator.less";
