--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,5 +1,56 @@
 {% extends 'ManhattanConsoleBundle::layout.html.twig' %}
 
+{% block title %}Console: Login{% endblock %}
+
+{% block fos_user_content %}
+<div class="col-md-6 col-md-offset-3">
+    <div class="hero-unit">
+        <div class="header">
+            <p>Please sign in with your <em>email address</em> and <em>password</em>.</p>
+        </div>
+
+        {% if error %}
+        <div class="bs-callout bs-callout-danger">
+            <h4>{{ error|trans({}, 'FOSUserBundle') }}</h4>
+        </div>
+        {% endif %}
+        <form action="{{ path("fos_user_security_check") }}" class="form-horizontal" method="post" role="form" id="login" novalidate>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+
+            <div class="form-group">
+                <label class="control-label" for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}:</label>
+                <div class="controls">
+                    <input type="text" id="username" class="form-control" name="_username" value="{{ last_username }}" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label" for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}:</label>
+                <div class="controls">
+                    <input type="password" id="password" class="form-control" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" />
+                </div>
+            </div>
+
+            <div class="form-group remember-me">
+                <div class="checkbox">
+                    <label for="remember_me" class="checkbox">
+                        <input type="checkbox" id="remember_me" name="_remember_me" value="" /> {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+            </div>
+        </form>
+        <a href="{{ path('fos_user_resetting_request') }}">Forgotten Password</a>
+    </div>
+</div>
+{% endblock fos_user_content %}
+
+
+{#}
+
 {% block title %}Manhattan Console: Login{% endblock %}
 
 {% block fos_user_content %}
@@ -46,3 +97,4 @@
 {% block navigationbar %}{% endblock navigationbar %}
 {% block container_id %}{% endblock container_id %}
 {% block footer %}{% endblock footer %}
+#}
