--- a/Resources/views/Resetting/request.html.twig
+++ b/Resources/views/Resetting/request.html.twig
@@ -1,44 +1,32 @@
 {% extends 'ManhattanConsoleBundle::layout.html.twig' %}
 
-{% block title %}Manhattan Console: Forgotten Password{% endblock %}
+{% block title %}Console: Forgotten Password{% endblock %}
 
 {% block fos_user_content %}
-<div class="pure-u-1">
-    <div class="login">
-
-        <header class="login-header">
+<div class="col-md-6 col-md-offset-3">
+    <div class="hero-unit">
+        <div class="header">
             <h2>Forgot your password?</h2>
             <p>Please enter your email address</p>
-        </header>
-
-        <div class="l-box">
-
-            {% if invalid_username is defined %}
-                <div class="alert error">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
-            {% endif %}
-
-            <form action="{{ path('fos_user_resetting_send_email', { 'subdomain': subdomain }) }}" class="pure-form" method="post" novalidate>
-
-                <div class="pure-control-group">
-                    <input type="text" id="username" name="username" required="required" placeholder="{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}" />
-                </div>
-
-                <div class="submit pure-control-group">
-                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
-                </div>
-            </form>
         </div>
 
-        <footer class="login-footer">
-            Maintained by Antelope Studios, under MIT Licence.
-        </footer>
+        {% if invalid_username is defined %}
+            <div class="alert error">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
+        {% endif %}
 
+        <form action="{{ path('fos_user_resetting_send_email', { 'subdomain': subdomain }) }}" class="form-horizontal" method="post" role="form" novalidate>
+
+            <div class="form-group">
+                <label class="control-label" for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}:</label>
+                <div class="controls">
+                    <input type="text" id="username" class="form-control" name="username" required="required" placeholder="{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
+            </div>
+        </form>
     </div>
 </div>
-
 {% endblock fos_user_content %}
-
-{% block content_class %}pure-u-1{% endblock content_class %}
-{% block navigationbar %}{% endblock navigationbar %}
-{% block container_id %}{% endblock container_id %}
-{% block footer %}{% endblock footer %}
