--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,1 +1,13 @@
 {% extends "ManhattanConsoleBundle::base.html.twig" %}
+
+{% block foot_script_assetic %}
+    {% javascripts
+    '@ManhattanConsoleBundle/Resources/public/js/jquery/jquery-2.1.1.js'
+    '@MopaBootstrapBundle/Resources/public/bootstrap/js/tooltip.js'
+    '@MopaBootstrapBundle/Resources/public/bootstrap/js/*.js'
+    '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
+    '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock foot_script_assetic %}
