--- a/Resources/views/User/passwordset.html.twig
+++ b/Resources/views/User/passwordset.html.twig
@@ -3,32 +3,27 @@
 {% block title %}Manhattan Console: Set Password{% endblock %}
 
 {% block fos_user_content %}
-<div class="pure-u-1">
-    <div class="setpassword">
-
-        {{ topHeader() }}
-
-        <div class="l-box">
+<div class="col-md-6 col-md-offset-3">
+    <div class="hero-unit">
+        <div class="header">
             <p>Please set your password for accessing the Console.</p>
-
-            <form action="{{ path('console_users_password_set', { 'subdomain': subdomain, 'token': token}) }}" {{ form_enctype(form) }} method="POST" class="pure-form" novalidate>
-                {{ form_widget(form) }}
-
-                <div class="login-submit pure-control-group">
-                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
-                </div>
-
-            </form>
         </div>
 
-        <footer class="login-footer">
-            Maintained by Antelope Studios, under MIT Licence.
-        </footer>
+        {% if error %}
+        <div class="bs-callout bs-callout-danger">
+            <h4>{{ error|trans({}, 'FOSUserBundle') }}</h4>
+        </div>
+        {% endif %}
+
+        <form action="{{ path('console_users_password_set', { 'subdomain': subdomain, 'token': token}) }}" class="form-horizontal" method="post" role="form" id="login" novalidate>
+            {{ form_widget(form) }}
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
+            </div>
+
+        </form>
+
     </div>
 </div>
 {% endblock fos_user_content %}
-
-{% block content_class %}pure-u-1{% endblock content_class %}
-{% block navigationbar %}{% endblock navigationbar %}
-{% block container_id %}{% endblock container_id %}
-{% block footer %}{% endblock footer %}
