--- a/Resources/views/Profile/edit.html.twig
+++ b/Resources/views/Profile/edit.html.twig
@@ -1,34 +1,23 @@
 {% extends "ManhattanConsoleBundle:Console:template.html.twig" %}
 
-{% block title %}Console: Profile | Edit Profile{% endblock title %}
-{% block template_title %}Console: Edit Profile{% endblock template_title %}
-{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="current"><a href="{{ path('fos_user_profile_show', { 'subdomain': subdomain }) }}">Edit Profile</a></li>{% endblock breadcrumbs %}
+{% block headline %}Console: Profile | Edit Profile{% endblock headline %}
+{% block title %}Console: Edit Profile{% endblock title %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="active">Edit Profile</li>{% endblock breadcrumbs %}
 
-{% block template_console %}
+{% block content_content %}
+    <form action="{{ path('fos_user_profile_edit', { 'subdomain': subdomain }) }}" {{ form_enctype(form) }} method="POST" role="form" class="form-horizontal" novalidate>
 
-<div class="pure-g-r">
-    <div class="pure-u-3-4">
+        {{ form_widget(form) }}
 
-        <div class="l-box">
-
-            <form action="{{ path('fos_user_profile_edit', { 'subdomain': subdomain }) }}" {{ form_enctype(form) }} method="POST" class="pure-form pure-form-stacked" novalidate>
-
-                {{ form_widget(form) }}
-
-                <div class="form-actions">
-                    <a href="{{ path('fos_user_profile_show', { 'subdomain': subdomain }) }}" class="pure-button">Back to Profile</a>
-                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'profile.edit.submit'|trans({}, 'FOSUserBundle') }}" />
-                </div>
-            </form>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input type="submit" class="btn btn-primary" value="{{ 'profile.edit.submit'|trans({}, 'FOSUserBundle') }}" />
+            </div>
         </div>
+    </form>
 
-    </div>
+{% endblock content_content %}
 
-    <div class="pure-u-1-4">
-        <div class="l-box">
-
-        </div>
-    </div>
-</div>
-
-{% endblock template_console %}
+{% block content_sidebar %}
+<a href="{{ path('fos_user_profile_show', { 'subdomain': subdomain }) }}" class="btn btn-info">Back to Profile</a>
+{% endblock content_sidebar %}
