--- a/Resources/views/User/list.html.twig
+++ b/Resources/views/User/list.html.twig
@@ -1,44 +1,54 @@
 {% extends "ManhattanConsoleBundle:Console:template.html.twig" %}
 
-{% block template_title %}Console: Users{% endblock template_title %}
+{% block headline %}Console: Users{% endblock headline %}
 {% block title %}Console: Users{% endblock title %}
-{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="current"><a href="{{ path('console_users', { 'subdomain': subdomain }) }}">Users</a></li>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li class="active">Users</li>{% endblock breadcrumbs %}
 
-{% block template_console %}
+{% block content_content %}
+    <h2>Users</h2>
 
-<table class="pure-table pure-table-striped">
-    <thead>
-        <tr>
-            <th class="title">Username</th>
-            <th>Email</th>
-            <th>&nbsp;</th>
-            <th>Last Login</th>
-            <th class="actions">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for entity in entities %}
-        <tr{% if loop.index is odd %} class="pure-table-odd"{% endif %}>
-            <td><a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}">{{ entity.username }}</a></td>
-            <td>{{ entity.email }}</td>
-            <td>{% spaceless %}
-                {% if entity.enabled %}
-                    <span class="pure-button pure-button-success small">Enabled</span>
-                {% else %}
-                    <span class="pure-button pure-button-warning small">Disabled</span>
-                {% endif %}
-            {% endspaceless %}</td>
-            <td>{{ entity.lastLogin|date('Y-m-d H:i:s') }}</td>
-            <td>
-                <a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}" class="pure-button pure-button-secondary small">edit</a>
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th class="title">Username</th>
+                    <th>Email</th>
+                    <th>&nbsp;</th>
+                    <th>Last Login</th>
+                    <th class="actions">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr{% if loop.index is odd %} class="pure-table-odd"{% endif %}>
+                    <td><a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}">{{ entity.username }}</a></td>
+                    <td>{{ entity.email }}</td>
+                    <td>{% spaceless %}
+                        {% if entity.enabled %}
+                            <span class="btn btn-success btn-sm">Enabled</span>
+                        {% else %}
+                            <span class="btn btn-warning btn-sm">Disabled</span>
+                        {% endif %}
+                    {% endspaceless %}</td>
+                    <td>{{ entity.lastLogin|date('Y-m-d H:i:s') }}</td>
+                    <td>
+                        <a href="{{ path('console_users_edit', { 'subdomain': subdomain, 'id': entity.id }) }}" class="btn btn-info btn-sm">edit</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-<div class="l-box">
-    <a href="{{ path('console_users_new', { 'subdomain': subdomain }) }}" class="pure-button pure-button-primary">Register New User</a>
+{% endblock content_content %}
+
+{% block content_sidebar %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">User Controls</h3>
+    </div>
+    <div class="panel-body">
+        <a href="{{ path('console_users_new', { 'subdomain': subdomain }) }}" class="btn btn-primary">Register New User</a>
+    </div>
 </div>
-
-{% endblock template_console %}
+{% endblock content_sidebar %}
