Updated formatting of base pages.

--- a/Resources/views/Console/index.html.twig
+++ b/Resources/views/Console/index.html.twig
@@ -3,14 +3,10 @@
 {% block template_title %}Manhattan Console{% endblock template_title %}
 {% block breadcrumbs %}<li class="current"><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li>{% endblock breadcrumbs %}
 
-{% block template_console %}
+{% block content_content %}
 
-<div class="pure-g-r">
-    <div class="pure-u-1-2">
+{% endblock content_content %}
 
-        <div class="l-box">
+{% block content_sidebar %}
 
-        </div>
-    </div>
-</div>
-{% endblock %}
+{% endblock content_sidebar %}
