--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block footer %}
-    <p>&copy; <a href="http://antelopestudios.com.au" target="_blank">Manhattan Console</a> 2013</p>
+    <p>&copy; <a href="http://antelopestudios.com.au" target="_blank">Manhattan Console</a> 2012-{{ "now"|date("Y") }}</p>
 {% endblock footer %}
 
 {# '@ErrorApiDashboardBundle/Resources/public/css/air-responsive.css'
