--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -1,6 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600&subset=latin,latin-ext";
-@import "http://fonts.googleapis.com/css?family=Raleway:400,600,700";
-
+@import "fonts.less";
 @import "variables.less";
 
 /* =============================================================================
