--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -179,26 +179,42 @@ table {
    ========================================================================== */
 
 .morris-hover {
-   position: absolute;
-   z-index: 1000;
+    position: absolute;
+    z-index: 1000;
 }
 
 .morris-hover.morris-default-style {
-   border-radius: 3px;
-   padding: 6px;
-   color: #333;
-   background: rgba(255, 255, 255, 0.8);
-   border: 1px solid #ddd;
-   font-size: 12px;
-   text-align: center;
+    border-radius: 3px;
+    padding: 6px;
+    color: #333;
+    background: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ddd;
+    font-size: 12px;
+    text-align: center;
 }
 
 .morris-hover.morris-default-style .morris-hover-row-label {
-   font-weight: bold;
-   margin: 0.25em 0;
+    font-weight: bold;
+    margin: 0.25em 0;
 }
 
 .morris-hover.morris-default-style .morris-hover-point{
    white-space: nowrap;
    margin: 0.1em 0;
+}
+
+/* =============================================================================
+   Collections
+   ========================================================================== */
+.control-label a[data-collection-add-btn] {
+    display: block;
+    width:50%;
+    float: right;
+}
+.details-collection.social-accounts .collection-item {
+    display: inline-block;
+}
+
+.details-collection.social-accounts .form-group {
+    float: left;
 }
