--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -218,3 +218,17 @@ table {
 .details-collection.social-accounts .form-group {
     float: left;
 }
+
+ul.social-accounts {
+    padding: 0;
+    list-style: none;
+}
+
+ul.social-accounts a {
+    display: block;
+    font-size: 1.3em;
+    margin: 0.5em 0;
+}
+ul.social-accounts i.fa {
+    padding-right: 0.5em;
+}
