Tag formatting added.

--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -111,6 +111,15 @@ ul.inline {
     }
 
 /* =============================================================================
+   Tags
+   ========================================================================== */
+.form-group.tag-container .checkbox {
+    float: left;
+    margin-left: @baseSpacing;
+    width: auto;
+}
+
+/* =============================================================================
    Footer
    ========================================================================== */
 footer {
