Changed format of the preview and upload button as used within the bundle to display a nice button, rather than the normal, ugly file upload form.

--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -251,6 +251,35 @@ table {
 }
 
 /* =============================================================================
+   Forms
+   ========================================================================== */
+
+input[type="file"] {
+    border: 0 none;
+    box-shadow: none;
+    height: auto;
+}
+div.preview div.image {
+    border: 1px solid #cccccc;
+    display: inline-block;
+    float: left;
+    padding: 5px;
+    width: auto;
+    margin-right: @baseSpacing;
+}
+
+div.preview label {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+
+    input[type="file"] {
+        display: none;
+    }
+}
+
+/* =============================================================================
    Collections
    ========================================================================== */
 .control-label a[data-collection-add-btn] {
