Added foratting of the display field within the file upload section.

--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -321,6 +321,12 @@ div.preview label {
     input[type="file"] {
         display: none;
     }
+
+    .file-name-display {
+        background-color: @white;
+        border: 0 none;
+        margin-left: @baseSpacing;
+    }
 }
 
 /* =============================================================================
