Added better specific field name settings.

--- a/Resources/public/less/dashboard.less
+++ b/Resources/public/less/dashboard.less
@@ -329,6 +329,13 @@ div.preview label {
     }
 }
 
+div.preview .file-name-display {
+    background-color: @white;
+    border: 0 none;
+    margin-left: @baseSpacing;
+    width: 50%;
+}
+
 /* =============================================================================
    Collections
    ========================================================================== */
