Updates to the manhattan console. Issues created with upgrade to 2.8 with Symfony, and changes made to bring it all inline.

--- a/Resources/views/Registration/register_content.html.twig
+++ b/Resources/views/Registration/register_content.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('fos_user_registration_register', { 'subdomain': subdomain }) }}" {{ form_enctype(form) }} method="POST" class="form-horizontal well" novalidate>
+<form action="{{ path('fos_user_registration_register', { 'subdomain': subdomain }) }}" method="POST" class="form-horizontal well" novalidate>
     {{ form_widget(form) }}
     <div class="form-actions">
         <a href="{{ path('console_users', { 'subdomain': subdomain }) }}" class="btn">Back to the list</a>
