--- a/Resources/views/Profile/edit.html.twig
+++ b/Resources/views/Profile/edit.html.twig
@@ -5,7 +5,7 @@
 {% block breadcrumbs %}<li><a href="{{ path('console_index', { 'subdomain': subdomain }) }}">Console</a></li><li><a href="{{ path('fos_user_profile_show', { 'subdomain': subdomain }) }}">View Profile</a></li><li class="active">Edit Profile</li>{% endblock breadcrumbs %}
 
 {% block content_content %}
-    <form action="{{ path('fos_user_profile_edit', { 'subdomain': subdomain }) }}" {{ form_enctype(form) }} method="POST" role="form" class="form-horizontal" novalidate>
+    <form action="{{ path('fos_user_profile_edit', { 'subdomain': subdomain }) }}" method="POST" role="form" class="form-horizontal" novalidate>
 
         {{ form_widget(form) }}
 
