--- a/Resources/views/Resetting/reset.html.twig
+++ b/Resources/views/Resetting/reset.html.twig
@@ -13,7 +13,7 @@
 
             {% trans_default_domain 'FOSUserBundle' %}
 
-            <form action="{{ path('fos_user_resetting_reset', {'subdomain': subdomain, 'token': token}) }}" {{ form_enctype(form) }} class="form-horizontal" method="post" role="form" novalidate>
+            <form action="{{ path('fos_user_resetting_reset', {'subdomain': subdomain, 'token': token}) }}" class="form-horizontal" method="post" role="form" novalidate>
 
                 {{ form_widget(form) }}
 
